Fix Small Issues
Light Theme:
- Change RULER BGColor
- Change ScrollBar BGColor

--- a/stuff/config/qss/Default/less/layouts/xsheet.less
+++ b/stuff/config/qss/Default/less/layouts/xsheet.less
@@ -7,7 +7,7 @@
 
 #xsheetArea,
 #ScrollArea {
-  background-color: @scrollbar-bg-color;
+  background-color: @xsheet-empty-bg-color;
   border: 0;
 }
 
