--- a/stuff/config/qss/Default/less/themes/Light.less
+++ b/stuff/config/qss/Default/less/themes/Light.less
@@ -75,7 +75,7 @@
 // -----------------------------------------------------------------------------
 
 // Container
-@scrollbar-bg-color: darken(@bg, 0);
+@scrollbar-bg-color: darken(@bg, 7);
 
 // Handle
 @scrollbar-handle-bg-color: lighten(@bg, 12);
@@ -199,6 +199,9 @@
 // FlipSlider
 @flipslider-notstarted-color: rgb(139, 37, 37);
 @flipslider-started-color: rgb(0, 168, 8);
+
+// Ruler
+@viewer-ruler-bg-color: lighten(@bg, 25);
 
 // -----------------------------------------------------------------------------
 // Schematic Viewer
